--- a/src/ui.css
+++ b/src/ui.css
@@ -7,32 +7,77 @@ body {
   background: #000;
   color: white;
 }
+
+h2, p {
+  margin: .4rem 0;
+}
+
 h4 {
   font-weight: normal;
 }
 button {
   border-radius: 5px;
-  background: white;
-  color: black;
+  background: black;
+  color: white;
   border: none;
   padding: 8px 15px;
-  margin-right: 0 10px;
-  box-shadow: inset 0 0 0 1px black;
+  margin-right: 10px;
+  box-shadow: inset 0 0 0 1px white;
   outline: none;
   cursor: pointer;
+  width: 100%;
 }
+
 #create {
   box-shadow: none;
+  border: 2px solid #76F6EE;
+  background: #76F6EE;
+  color: black;
+}
+
+#generate {
+  box-shadow: none;
+  border: 2px solid #18A0FB;
   background: #18A0FB;
   color: white;
 }
+
+button.disabled {
+  background: black;
+  color: white;
+  border: 2px solid white;
+}
+
+.flex {
+  display: flex;
+  justify-content: stretch;
+  margin-bottom: 20px;
+}
+
+.flex div {
+  width: 100%;
+  margin-right: 10px;
+}
+
+button:last-child, .flex div:last-child {
+  margin-right: 0;
+}
+
 input {
   border: none;
   outline: none;
   padding: 8px;
   margin-bottom: 4px;
+  height: 32px;
+  width: 100%;
+  font-family: "Work Sans", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  color: black;
 }
+
 input:hover { box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1); }
+#create:hover, #generate:hover { border: 2px solid white; }
 button:focus { box-shadow: inset 0 0 0 2px #18A0FB; }
-#create:focus { box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.3); }
+#create:focus, #generate:focus { box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.3); }
 input:focus { box-shadow: inset 0 0 0 2px #18A0FB; }
